--- a/src/partials/search-form.html
+++ b/src/partials/search-form.html
@@ -1,5 +1,4 @@
 <form class="search-form" id="search-form">
     <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
-    <button type="submit">Search</button>
+    <button type="submit" class="btn btn-primary mb-2">Search</button>
 </form>
-<div class="gallery">
