--- a/src/sass/_search-form.scss
+++ b/src/sass/_search-form.scss
@@ -4,9 +4,24 @@
   font-size: 18px;
   background-color: rgb(23, 132, 175);
   padding: 5px;
+  display: flex;
+  justify-content: center;
 }
 
 #search-form input {
   border-radius: 5px;
   padding: 5px;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  padding: 8px;
+  margin-bottom: 24px;
 }
